<resources>
    <string name="base_url">https://conf.dharanet.com/conf/v1/main</string>
    <string name="api_format">&amp;format=json</string>
    <string name="api_event">&amp;event_id=</string>
    <string name="ads_api">/getads.php?event_id=</string>
    <string name="event_details">/eventdetails.php?event_id=</string>
    <string name="event_list">/search.php</string>
    <string name="exhibitor_apis">/exhibitors.php?event_id=</string>
    <string name="graphics_apis">/event_graphics.php?event_id=</string>
    <string name="locale_api">/getlanguage.php?locale=</string>
    <string name="logistics_api">/logistics.php?event_id=</string>
    <string name="maps_api">/maps.php?event_id=</string>
    <string name="menu_api">/getmenuitems_new.php?event_id=</string>
    <string name="attendee_api">/attendees.php?event_id=</string>
    <string name="tracks_list_api">/gettracks.php?event_id=</string>
    <string name="exhibitor_category_api">/get_exhibitor_catgories.php?format=json</string>
    <string name="sessions_api">/sessions.php?event_id=</string>
    <string name="speakers_api">/speakers.php?event_id=</string>
    <string name="sponsors_api">/sponsors.php?event_id=</string>
    <string name="survey_apis">/getsurveys.php?event_id=</string>
    <string name="versions_api">/getversions.php?format=json&amp;event_id=</string>
    <string name="message_inbox_api">/getmessages.php?format=json&amp;threads_per_page=10&amp;page_num=</string>
    <string name="message_count">/getmessagecount.php?format=json</string>
    <string name="message_sent_api">/getmessages.php?format=json</string>
    <string name="load_more_msg_api">/getmessages.php?format=json</string>
    <string name="mark_msg_as_read_api">/markmessagesread.php?format=json</string>
    <string name="send_msg_api">/sendmessage.php?format=json</string>
    <string name="login_api">/login.php?format=json</string>
    <string name="send_contact_api">/sendcontact.php?format=json</string>
    <string name="discussion_board_api">/discussion.php?event_id=</string>
    <string name="alerts_api">/getnotifications.php?event_id=</string>
    <string name="alerts_count_api">/getunreadalertcount.php?event_id=</string>
    <string name="mark_alert_read_api">/markalertsread.php?event_id=</string>
    <string name="live_api">/livefeeds.php?format=json&amp;livefeedformat=new&amp;event_id=</string>
    <string name="like_unlike_schedule_api">/myschedule.php?format=json</string>
    <string name="session_note_api">/sessionNotes.php?format=json</string>
    <string name="notelist_api">/mynote_todo.php?format=json</string>
    <string name="best_match_api">/getbestmatches.php?format=json</string>
    <string name="all_resources_api">/getsessiondownloads.php?format=json</string>
    <string name="upload_image_api">/uploadimage_android.php</string>
    <string name="update_profile_api">/editprofile.php?format=json&amp;event_id=</string>
    <string name="interest_api">/getintrests.php?format=json</string>
    <string name="photogallery_list">/photo_gallery_images.php?format=json</string>
    <string name="image_base_url">http://d1izx6szmu30ih.cloudfront.net/main/</string>
    <string name="photogallery_upload_image">/photo_gallery_images_android.php</string>
    <string name="meeting_api">/meeting.php?format=json</string>
    <string name="activity_feed">activity_feed</string>
    <string name="detail">detail</string>
    <string name="schedule">schedule</string>
    <string name="mycalendar">mycalendar</string>
    <string name="speakers">speakers</string>
    <string name="exhibitors">exhibitors</string>
    <string name="sponsors">sponsors</string>
    <string name="maps">maps</string>
    <string name="live">live</string>
    <string name="social">social</string>
    <string name="logistics">logistics</string>
    <string name="logistics2">logistics2</string>
    <string name="logistics3">logistics3</string>
    <string name="my_account">my account</string>
    <string name="survey">survey</string>
    <string name="attendees">attendees</string>
    <string name="matches">matches</string>
    <string name="messages">messages</string>
    <string name="Alerts">Alerts</string>
    <string name="downloads">downloads</string>
    <string name="qrcode">qrcode</string>
    <string name="search">search</string>
    <string name="discussion_board">discussion_board</string>
    <string name="my_notes">my_notes</string>
    <string name="things_to_do">things_to_do</string>
    <string name="photo_gallery">photo_gallery</string>
    <string name="i2i">i2i</string>
    <string name="chat">chat</string>
    <string name="game">game</string>
    <string name="invitation">invitation</string>
    <string name="new_meeting">new_meeting</string>
    <string name="splash">splash_image</string>
    <string name="main_header">main_top_nav_img</string>
    <string name="top_nav">top_nav_img</string>
    <string name="menu_background">menu_background</string>
    <string name="app_background">app_background_img</string>
    <string name="app_back_button">app_back_button_img</string>
    <string name="app_dashboard_button">app_dashboard_button_img</string>
    <string name="dlscreen_background">dlscreen_background</string>
    <string name="Resources">Resources</string>
    <string name="Maps">Maps</string>
    <string name="menus">Menus</string>
    <string name="image">Images</string>
    <string name="no_internet">You are offline</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_event_specific_splash">EventSpecificSplash</string>
    <string name="title_activity_grid_home">GridHome</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="information">Information</string>
    <string name="venue">Venue :</string>
    <string name="address">Address :</string>
    <string name="get_direction">Get Directions</string>
    <string name="get_ticket">Get Ticket</string>
    <string name="event_website">Event Website</string>
    <string name="description">Description</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_data">No Data Available</string>
    <string name="send_info_request">Would you like to connect with the company representative?</string>
    <string name="contact_sent">Your request to connect has been sent to the company representative via email.</string>
    <string name="session_resources">Session Resources</string>
    <string name="attendee_resources">Attendee Resources</string>
    <string name="exhibitor_resources">Exhibitor Resources</string>
    <string name="sponsor_resources">Sponsors Resources</string>
    <string name="speaker_resources">Speakers Resources</string>
    <string name="logistics_resources">Logistics Resources</string>
    <string name="file_downloaded">File successfully downloaded</string>
    <string name="file_download_failed">Problem Loading Request</string>
    <string name="title_activity_choose_attendee">ChooseAttendeeActivity</string>
    <string name="erroor_occured">Error Occured...</string>
    <string name="title_activity_logistics">LogisticsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_venue_map">VenueMapActivity</string>
    <string name="title_activity_simple_list">SimpleListActivity</string>
    <string name="title_activity_schedule_track_list">ScheduleTrackListActivity</string>
    <string name="title_activity_schedule_list">ScheduleListActivity</string>
    <string name="add_schedule">Do you want to add this session to your schedule?</string>
    <string name="remove_schedule">Do you want to remove this session from your schedule?</string>
    <string name="add_schedule_to_calendar">Add this to your calendar?</string>
    <string name="remove_schedule_from_calendar">Event removed from your calendar</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="share">Share</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_notes_details">NotesDetailsActivity</string>
    <string name="title_activity_notes_list">NotesListActivity</string>
    <string name="no_note_msg">Looks like you have not added any note.</string>
    <string name="no_todo">No To-do items.</string>
    <string name="add_note_btn">Create a note</string>
    <string name="add_todo">Add To-do</string>
    <string name="email">Email</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="email_notes">Email Notes</string>
    <string name="delete_notes">Delete Notes</string>
    <string name="email_to_do">Email To-Dos</string>
    <string name="delete_to_do">Delete To-Dos</string>
    <string name="delete_note_msg">Are you sure you want to delete these notes?</string>
    <string name="empty_delete_list_msg">Please select at-least one note.</string>
    <string name="note_heading">Add New Note</string>
    <string name="things_todo_heading">Add New To-do</string>
    <string name="title_activity_to_do_details">ToDoDetailsActivity</string>
    <string name="new_toDo">Add New To-Do</string>
    <string name="subject">Subject</string>
    <string name="todo_hint">What do you have to to?</string>
    <string name="reminder_toggle">ON/OFF Reminder</string>
    <string name="set_date_time">Set Date &amp; Time</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="best_match_loading">Please wait. Loading best match for you.</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_activity_view_all_activity">ViewAllActivity</string>
    <string name="download_all_msg">Do you want to save data of this event?</string>
    <string name="str_title">Title:</string>
    <string name="str_name">Name:</string>
    <string name="str_company">Company:</string>
    <string name="str_email">Email:</string>
    <string name="str_phone">Primary Phone:</string>
    <string name="str_interest">Interests:</string>
    <string name="str_keyword">Keyword:</string>
    <string name="str_privacy">Privacy:</string>
    <string name="str_bio">Bio:</string>
    <string name="allow_msg">Do you want to allow other attendees to send message to you?</string>
    <string name="hide_profile">Do you want to hide your profile from others?</string>
    <string name="hide_contact_info">Do you want to hide your contact information from others?</string>
    <string name="logout_permission">Are you sure want to logout?</string>
    <string name="title_activity_my_account_activity">MyAccountActivity</string>
    <string name="image_upload_dialog_heading">Make a Selection</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Photo Library</string>
    <string name="upload">Upload</string>
    <string name="upload_dialog_txt">Please add your comment about this picture</string>
    <string name="setup_meeting">Set Up Meeting</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="timezone">Timezone</string>
    <string name="go_to_next_step">Go To Next Step</string>
    <string name="cancel_return_to_calendar">Cancel and return to your calendar</string>
    <string name="create_and_exit">Create and exit</string>
    <string name="manage_meeting">Manage Meeting</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
</resources>