<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGray"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/LightGray"
        android:orientation="vertical">

        <include layout="@layout/layout_header" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:text="@string/setup_meeting"
            android:textSize="@dimen/text_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:alpha="0.6"
            android:background="@color/darkgrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/meetingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/title"
                android:padding="10dp"
                android:textSize="@dimen/text_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:alpha="0.3"
                android:background="@color/darkgrey"

                />

            <EditText
                android:id="@+id/meetingLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/location"
                android:padding="10dp"
                android:textSize="@dimen/text_14" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:alpha="0.6"
            android:background="@color/darkgrey" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginTop="40dp"
            android:alpha="0.6"
            android:background="@color/darkgrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/meetingDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="left|top"
                android:hint="@string/description"
                android:minLines="4"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/text_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:alpha="0.3"
                android:background="@color/darkgrey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/dateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/selectDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/select_date" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:alpha="0.3"
                android:background="@color/darkgrey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timezone" />

                <TextView
                    android:id="@+id/timezone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:alpha="0.6"
            android:background="@color/darkgrey" />


        <Button
            android:id="@+id/goToNextStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/go_to_next_step"
            android:textAllCaps="false"
            android:textColor="@color/exhibitor_buttons_blue" />

        <Button
            android:id="@+id/cancelAndReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/darkgrey"
            android:text="@string/cancel_return_to_calendar"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/createAndExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/exhibitor_buttons_blue"
            android:text="@string/create_and_exit"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>

</ScrollView>

