<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/manage_meeting" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:alpha="0.7"
            android:background="@color/darkgrey" />

        <TextView
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/accept"
            android:textColor="@color/exhibitor_buttons_blue"
            android:textSize="@dimen/text_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:alpha="0.7"
            android:background="@color/darkgrey" />

        <TextView
            android:id="@+id/decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/decline"
            android:textColor="@color/exhibitor_buttons_blue"
            android:textSize="@dimen/text_16" />
    </LinearLayout>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@color/exhibitor_buttons_blue"
        android:textSize="@dimen/text_16" />
</LinearLayout>