<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGray"
    android:orientation="vertical"
    tools:context="com.grupio.notes.NotesDetailsActivity">

    <include layout="@layout/layout_header" />

    <include layout="@layout/layout_banner" />

    <RelativeLayout
        android:id="@+id/noteHeaderLay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_header_height">

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/book_btn"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/saveBtn"
            android:layout_toRightOf="@+id/deleteBtn"
            android:gravity="center"
            android:text="Session Notes"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/book_btn"
            android:text="@string/save"
            android:textColor="@color/white" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/subject"
                android:textSize="@dimen/text_18" />


            <TextView
                android:id="@+id/todofield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/white"
                android:elevation="5dp"
                android:gravity="top|left"
                android:hint="@string/todo_hint"
                android:minLines="6"
                android:padding="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_header_height"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/reminder_toggle"
                    android:textSize="@dimen/text_16" />

                <Switch
                    android:id="@+id/reminderToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:checked="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/dateTimelay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_header_height"
                    android:gravity="center_vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/set_date_time"
                        android:textSize="@dimen/text_16" />

                    <TextView
                        android:id="@+id/dateTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="16dp"
                        android:textSize="@dimen/text_16" />
                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/like_unlike_lay"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <Button
                        android:id="@+id/dateBtn"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/left_round_btn"
                        android:text="@string/set_date"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/timeBtn"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/right_round_stroke"
                        android:text="@string/set_time"
                        android:textAllCaps="false" />


                </LinearLayout>


                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:visibility="visible" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
